# AI-research-analyst

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  architecture.md  pyproject.toml
.claude/: settings.json
agents/: logging_config.py
agents/scraper/: agent.py
agents/scraper/sources/: arxiv.py  github_trending.py  hackernews.py  rss.py
agents/summarizer/: agent.py
agents/summarizer/prompts/: registry.py  v1.json
delivery/: email_digest.py  run_manifest.py
docs/: cloudwatch_queries.md
handlers/: daily_digest.py
infra/: samconfig.toml  template.yaml
scripts/: run_local.py  test_email.py
tasks/: lessons.md  phase1a_spec.md  phase1b_spec.md  phase1c_spec.md  todo.md
tests/fixtures/: arxiv_response.xml  github_trending.html  hn_response.json  rss_response.xml
tests/integration/: test_handler.py
tests/unit/: test_run_manifest.py  test_scraper.py  test_summarizer.py
